objects/ASI_TH_CRM_Project__c.object
<CustomObject>
    <fields>
        <fullName>ASI_TH_CRM_From__c</fullName>
        <label>From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Mechanics__c</fullName>
        <label>Mechanics</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_To__c</fullName>
        <label>To</label>
        <type>Date</type>
    </fields>
    <label>Project (TH)</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project (TH) Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <recordTypes>
        <fullName>ASI_TH_CRM_Project</fullName>
        <active>true</active>
        <label>ASI TH CRM Project</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>